--- a/src/layouts/SEO.astro
+++ b/src/layouts/SEO.astro
@@ -1,14 +1,14 @@
 ---
 const title = 'LF Dryer Repair Services | +1 (323) 990-7550';
-const description = 'A minimal Astro starter template, with CUBE CSSLG DRyer Repair Experts in Los Angeles County | Orange County | Ventura County';
-const ogImage = 'https://lgdryer.repair/img/lg-dryer-repair-services.webp';
+const description = 'Samsung Refrigerator Experts in Los Angeles County | Orange County | Ventura County';
+const ogImage = '.webp';
 ---
 
-<meta name="og:site_name" property="og:site_name" content="LG Dryer Repair" />
+<meta name="og:site_name" property="og:site_name" content="Samsung Refrigerator Repair" />
 <meta name="og:type" property="og:type" content="website" />
 <meta
   property="og:description"
-  content="LG DRyer Repair Experts in Los Angeles County | Orange County | Ventura County"
+  content="Samsung Refrigerator Repair Experts in Los Angeles County | Orange County | Ventura County"
 />
 <meta property="og:title" content={title} />
 <meta property="og:image" content={ogImage} />
