--- a/src/layouts/SEO.astro
+++ b/src/layouts/SEO.astro
@@ -1,5 +1,5 @@
 ---
-const title = 'LF Dryer Repair Services | +1 (323) 990-7550';
+const title = 'Samsung Refrigerator Repair Services | +1 (323) 990-7550';
 const description = 'Samsung Refrigerator Experts in Los Angeles County | Orange County | Ventura County';
 const ogImage = '.webp';
 ---
