--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,11 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="LG Dryer Repair Experts | +1 (323) 990-7550">
+<Layout title="Samsung Refrigerator  Repair Experts | +1 (323) 990-7550">
     <div style="max-width:680px; max-height:680px; margin:0 auto 0 auto;">
         <img class="responsiveimg"
-        alt="Professional LG Dryer Repair Services"
-        src="images/lg-dryer-repair-services.webp" width="600" height="600">
+        alt="Professional Samsung Refrigerator  Repair Services"
+        src="images/.webp" width="600" height="600">
     </div>
     <div class="maintext">
         <ul>
@@ -23,7 +23,7 @@ import Layout from '../layouts/Layout.astro';
     </div>
     <div id="price-list"></div>
     <div class="maintext">
-        <h2>LG DRYER Common Issues&nbsp;&nbsp;&nbsp;<a aria-label="Learn more about LG dryer repair" href="#topblock"><img
+        <h2>Samsung Refrigerator  Common Issues&nbsp;&nbsp;&nbsp;<a aria-label="Learn more about Samsung Refrigerator  repair" href="#topblock"><img
                 loading="lazy" alt="Go to main menu" src="images/back_to_top.png" width="80" height="79"></a></h2>
         <br>
         <table style="color:#ffffff; font-size:1.5em; width:90%; margin:0 auto 0 auto;">
@@ -37,12 +37,12 @@ import Layout from '../layouts/Layout.astro';
     <div id="repair"></div>
     <hr style="width:85%; margin:0 auto 0 auto;"><br>
     <div class="maintext">
-        <h2> LG Dryer Repair Services &nbsp; &nbsp;<a aria-label="Learn more about LG dryer repair"
+        <h2> Samsung Refrigerator  Repair Services &nbsp; &nbsp;<a aria-label="Learn more about Samsung Refrigerator repair"
                                                       href="#topblock"><img
-                loading="lazy" alt="LG appliance repair services - main menu" src="images/back_to_top.png" width="80"
+                loading="lazy" alt="Samsung Refrigerator  repair services - main menu" src="images/back_to_top.png" width="80"
                 height="79"></a></h2>
         <div style="max-width:500px; max-height:500px; margin:0 auto 0 auto; padding:20px;">
-            <img loading="lazy" class="responsiveimg" alt="Professional LG Dryer Repair Services" src="images/.webp"  width="500" height="500"></div>
+            <img loading="lazy" class="responsiveimg" alt="Professional Samsung Refrigerator  Repair Services" src="images/.webp"  width="500" height="500"></div>
         
         XXXXX
         
@@ -53,9 +53,9 @@ import Layout from '../layouts/Layout.astro';
     <hr style="width:85%; margin:0 auto 0 auto;"><br>
     <div id="maintenance"></div>
     <div class="maintext">
-        <h2>LG Dryer Maintenance Services &nbsp; &nbsp;<a aria-label="Learn more about LG dryer installation" href="#topblock"><img loading="lazy" alt="Go to main menu"  src="images/back_to_top.png" width="80" height="79"></a></h2>
+        <h2>Samsung Refrigerator  Maintenance Services &nbsp; &nbsp;<a aria-label="Learn more about Samsung Refrigerator installation" href="#topblock"><img loading="lazy" alt="Go to main menu"  src="images/back_to_top.png" width="80" height="79"></a></h2>
         <div style="max-width:500px; max-height:500px; margin:0 auto 0 auto; padding:20px;">
-            <img loading="lazy"  class="responsiveimg"   alt="Professional LG Dryer Repair Services" src="images/l.webp" width="500" height="500"></div>
+            <img loading="lazy"  class="responsiveimg"   alt="Professional Samsung Refrigerator Repair Services" src="images/l.webp" width="500" height="500"></div>
        
        XXXXXX
        
