--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/Layout.astro';
     <div style="max-width:680px; max-height:680px; margin:0 auto 0 auto;">
         <img class="responsiveimg"
         alt="Professional Samsung Refrigerator  Repair Services"
-        src="images/.webp" width="600" height="600">
+        src="images/samsung-refrigerator-repair-services.webp" width="600" height="600">
     </div>
     <div class="maintext">
         <ul>
@@ -75,7 +75,7 @@ import Layout from '../layouts/Layout.astro';
                 loading="lazy" alt="Samsung Refrigerator  repair services - main menu" src="images/back_to_top.png" width="80"
                 height="79"></a></h2>
         <div style="max-width:500px; max-height:500px; margin:0 auto 0 auto; padding:20px;">
-            <img loading="lazy" class="responsiveimg" alt="Professional Samsung Refrigerator  Repair Services" src="images/.webp"  width="500" height="500"></div>
+            <img loading="lazy" class="responsiveimg" alt="Professional Samsung Refrigerator  Repair Services" src="images/samsung-fridge-maintenance.webp"  width="500" height="500"></div>
  <p>Is your Samsung refrigerator not functioning as it should? Don't let a malfunctioning appliance disrupt your daily routine. Our expert technicians specialize in prompt and reliable Samsung refrigerator repair services, ensuring your fridge operates at its best.</p>
 
     <h2>Why Choose Our Samsung Refrigerator Repair Services?</h2>
@@ -124,7 +124,7 @@ import Layout from '../layouts/Layout.astro';
     <div class="maintext">
         <h2>Samsung Repair and Maintenance Expert Services&nbsp; &nbsp;<a aria-label="Learn more about Samsung Refrigerator installation" href="#topblock"><img loading="lazy" alt="Go to main menu"  src="images/back_to_top.png" width="80" height="79"></a></h2>
         <div style="max-width:500px; max-height:500px; margin:0 auto 0 auto; padding:20px;">
-            <img loading="lazy"  class="responsiveimg"   alt="Professional Samsung Refrigerator Repair Services" src="images/l.webp" width="500" height="500"></div>
+            <img loading="lazy"  class="responsiveimg"   alt="Professional Samsung Refrigerator Repair Services" src="images/samsung-fridge-repair-los-angeles-orange-county-ventura-county.webp" width="500" height="500"></div>
        
    <p>Experience unparalleled care for your Samsung appliances with our dedicated team of repair and maintenance experts. We specialize in delivering top-notch services to ensure your Samsung devices operate at peak efficiency. Discover the excellence of our Samsung repair and maintenance services:</p>
 
