--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="images/icon.ico" />
     <meta name="generator" content={Astro.generator} />
     <meta name="theme-color" content="#9EA3FA" />
-
+<meta name="google-site-verification" content="E6ZAO5XTvxM9Jq-YZ9lmOCJMKmSD6bAMupJLxFoQfN0" />
     <SEO />
 
     <title>{title}</title>
