--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,17 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <meta name="theme-color" content="#9EA3FA" />
 <meta name="google-site-verification" content="E6ZAO5XTvxM9Jq-YZ9lmOCJMKmSD6bAMupJLxFoQfN0" />
-    <SEO />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X8RV8VZX5Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X8RV8VZX5Y');
+</script>
+
+<SEO />
 
     <title>{title}</title>
 
